# mvp

./: Cargo.toml  README.md  pyproject.toml
maturin_template/: __main__.py
mvp/: __init__.py  __main__.py  command.py  plugin.py  rule.py
src/: main.rs
