[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mvp"
dynamic = ["version"]
description = "MVP Implementation in Rust and Python by HydroRoll-Team"
authors = [
    { name = "HsiangNianian", email = "leader@hydroroll.team" }
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[project.scripts]
mvp = "mvp.__main__:main"

[tool.maturin]
bindings = "bin"
# manifest-path = "Cargo.toml"
module-name = "mvp"