[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hydromvp"
dynamic = ["version"]
description = "MVP Implementation in Rust and Python by HydroRoll-Team"
authors = [
    { name = "HsiangNianian", email = "leader@hydroroll.team" }
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "AGPL-3.0" }
classifiers = [
    "License :: OSI Approved :: AGPL-3.0",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp>=3.13.2",
    "conventionalrp>=1.2.1",
    "fastapi>=0.121.0",
    "infini>=2.1.15",
    "oneroll>=1.3.4",
]

# [project.scripts]
# mvp = "mvp.__main__:main"

[tool.maturin]
bindings = "bin"
# manifest-path = "Cargo.toml"
module-name = "mvp"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
